--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: WebConfs - A blog about web conferences
 email: coolwebconfs@gmail.com
 description: A blog about my favorite web conferences.
-#url: "http://webconfs.me" # the base hostname & protocol for your site
+url: "http://webconfs.me" # the base hostname & protocol for your site
 baseurl: ""
 twitter_username: guilh
 
