--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: WebConfs - A blog about web conferences
 email: coolwebconfs@gmail.com
 description: A blog about my favorite web conferences.
 url: "http://webconfs.me" # the base hostname & protocol for your site
-baseurl: ""
+baseurl: "http://webconfs.me"
 twitter_username: guilh
 
 paginate: 3
